force-app/main/default/objects/Campus_Engagement_Details__c/Campus_Engagement_Details__c.object-meta.xml
<CustomObject>
    <description>This is where the campus engagement details live</description>
    <label>Campus Engagement Details</label>
    <nameField>
        <label>Campus Engagement Details Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Campus Engagement Details</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>