force-app/main/default/objects/Campus_Engagement_Details__c/fields/Campus_Stakeholder_Meeting__c.field-meta.xml
<CustomField>
    <fullName>Campus_Stakeholder_Meeting__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Campus Stakeholder Meeting</label>
    <type>Checkbox</type>
</CustomField>