force-app/main/default/objects/Campus_Engagement_Details__c/fields/Intro_Email__c.field-meta.xml
<CustomField>
    <fullName>Intro_Email__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Intro Email</label>
    <type>Checkbox</type>
</CustomField>