force-app/main/default/objects/Campus_Engagement_Details__c/fields/Multiple_Campuses__c.field-meta.xml
<CustomField>
    <fullName>Multiple_Campuses__c</fullName>
    <label>Multiple Campuses</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>