force-app/main/default/objects/Campus_Engagement_Details__c/fields/My_Money_101_Requirement__c.field-meta.xml
<CustomField>
    <fullName>My_Money_101_Requirement__c</fullName>
    <defaultValue>false</defaultValue>
    <label>SALT Courses Requirement</label>
    <type>Checkbox</type>
</CustomField>