force-app/main/default/objects/Campus_Engagement_Details__c/fields/Residential_Campus__c.field-meta.xml
<CustomField>
    <fullName>Residential_Campus__c</fullName>
    <label>Residential Campus</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>