force-app/main/default/objects/Campus_Engagement_Details__c/fields/SALT_Ambassador_Program__c.field-meta.xml
<CustomField>
    <fullName>SALT_Ambassador_Program__c</fullName>
    <defaultValue>false</defaultValue>
    <label>SALT Ambassador Program</label>
    <type>Checkbox</type>
</CustomField>