force-app/main/default/objects/Campus_Engagement_Details__c/fields/SALT_Communication_Kit__c.field-meta.xml
<CustomField>
    <fullName>SALT_Communication_Kit__c</fullName>
    <defaultValue>false</defaultValue>
    <label>SALT Communication Kit</label>
    <type>Checkbox</type>
</CustomField>