force-app/main/default/objects/Campus_Engagement_Details__c/fields/SALT_Faculty_Staff_Training__c.field-meta.xml
<CustomField>
    <fullName>SALT_Faculty_Staff_Training__c</fullName>
    <defaultValue>false</defaultValue>
    <label>SALT Faculty/Staff Training</label>
    <type>Checkbox</type>
</CustomField>