force-app/main/default/objects/Campus_Engagement_Details__c/fields/SALT_Requirement__c.field-meta.xml
<CustomField>
    <fullName>SALT_Requirement__c</fullName>
    <defaultValue>false</defaultValue>
    <label>SALT Requirement</label>
    <type>Checkbox</type>
</CustomField>